fixed font size on mobile issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -162,7 +162,7 @@ strong {
   position: absolute;
   top: 10px;
   font-family: "VT323", monospace;
-  font-size: 23px;
+  font-size: 18px;
   font-style: italic;
   left: 0px;
   width: 100%;
